sandbox/output
StringCalculatorTest.java:5: error: cannot find symbol
@RunWith(JUnitParamsRunner.class)
         ^
  symbol: class JUnitParamsRunner
StringCalculatorTest.java:17: error: cannot find symbol
    @Parameters(method="getInputAndExpected")
     ^
  symbol:   class Parameters
  location: class StringCalculatorTest
StringCalculator.java:19: error: incompatible types: char cannot be converted to String
        String[] numbers = input.split(',');
                                       ^
StringCalculatorTest.java:21: error: cannot find symbol
        int result = sc.Add(input);
                       ^
  symbol:   method Add(String)
  location: variable sc of type StringCalculator
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
